Changed loadouts to use mocks in testing.